--- a/FE/Admin/package.json
+++ b/FE/Admin/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rematch/core": "^2.2.0",
     "@svgr/webpack": "^8.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -10,8 +11,11 @@
     "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.7.2",
+    "redux": "^4.2.1",
     "sass": "^1.63.6",
     "web-vitals": "^2.1.4"
   },
