--- a/FE/Dashboard/package.json
+++ b/FE/Dashboard/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-carousel": "^1.0.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
     "react-responsive-carousel": "^3.2.23",
