--- a/FE/Dashboard/package.json
+++ b/FE/Dashboard/package.json
@@ -11,6 +11,7 @@
     "react-grid-carousel": "^1.0.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
+    "react-multi-carousel": "^2.8.4",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
