--- a/FE/Admin/package.json
+++ b/FE/Admin/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.3.0",
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "firebase": "^10.0.0",
     "react": "^18.2.0",
