--- a/FE/Dashboard/package.json
+++ b/FE/Dashboard/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rematch/core": "^2.2.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-grid-carousel": "^1.0.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
+    "react-multi-carousel": "^2.8.4",
+    "react-redux": "^8.1.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "styled-components": "^6.0.2",
     "web-vitals": "^2.1.0"
   },
@@ -38,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
