--- a/FE/Dashboard/package.json
+++ b/FE/Dashboard/package.json
@@ -17,6 +17,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-slider": "^2.0.6",
     "redux": "^4.2.1",
     "styled-components": "^6.0.2",
     "web-vitals": "^2.1.0"
