--- a/FE/Admin/package.json
+++ b/FE/Admin/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/joy": "^5.0.0-alpha.87",
     "@mui/material": "^5.13.7",
     "@rematch/core": "^2.2.0",
     "@svgr/webpack": "^8.0.1",
