--- a/FE/Dashboard/package.json
+++ b/FE/Dashboard/package.json
@@ -18,6 +18,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "sass": "^1.63.6",
     "styled-components": "^6.0.2",
