--- a/FE/Admin/package.json
+++ b/FE/Admin/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "recharts": "^2.7.2",
     "redux": "^4.2.1",
     "sass": "^1.63.6",
