--- a/FE/Admin/package.json
+++ b/FE/Admin/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "firebase": "^10.0.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18.2.0",
@@ -26,6 +27,7 @@
     "recharts": "^2.7.2",
     "redux": "^4.2.1",
     "sass": "^1.63.6",
+    "styled-components": "^6.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
