--- a/FE/Dashboard/package.json
+++ b/FE/Dashboard/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/joy": "^5.0.0-alpha.87",
+    "@mui/material": "^5.14.2",
     "@rematch/core": "^2.2.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
@@ -23,7 +27,7 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "sass": "^1.63.6",
-    "styled-components": "^6.0.2",
+    "styled-components": "^6.0.5",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
